# src/urlshortener/internal/api/oapi/types.gen.go
@@ -1,7 +1,7 @@
-// Package api provides primitives to interact with the openapi HTTP API.
+// Package oapi provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
-package api
+package oapi
 
 // Error defines model for Error.
 type Error struct {
@@ -18,6 +18,12 @@ type ShortenedURL struct {
 type URL struct {
 	ExpireAt *int64 `json:"expireAt,omitempty"`
 	Url      string `json:"url"`
+}
+
+// Version defines model for Version.
+type Version struct {
+	Revision string `json:"revision"`
+	Version  string `json:"version"`
 }
 
 // BadRequest defines model for BadRequest.
